--- a/eklenti server/package.json
+++ b/eklenti server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cron": "^2.3.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.0.0",
     "node": "^19.6.1",
